welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:16: error: not found: value k
		setCouleurBrosse( T(k))
                                    ^Array1:17: error: not found: value poseBrosse
		poseBrosse()
                ^